5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1575_1333.log
== SUBMITION (2019-03-31 22:00:29) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.140675
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:01:13) 
-- CODE:
expressao = (30–3**2)+(8//3**2)*10
print(expressao)
-- EXECUTION TIME:
0.156429
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30\u20133**2)+(8//3**2)*10
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:01:15) 
-- CODE:
expressao = (30–3**2)+(8//3**2)*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30–3**2)+(8//3**2)*10
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:01:15) 
-- CODE:
expressao = (30–3**2)+(8//3**2)*10
print(expressao)
-- EXECUTION TIME:
0.156181
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30\u20133**2)+(8//3**2)*10
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:01:54) 
-- CODE:
expressao = (30–3)**2+((8//3)**2)*10
print(expressao)
-- EXECUTION TIME:
0.266594
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30\u20133)**2+((8//3)**2)*10
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:01:55) 
-- CODE:
expressao = (30–3)**2+((8//3)**2)*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30–3)**2+((8//3)**2)*10
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:01:55) 
-- CODE:
expressao = (30–3)**2+((8//3)**2)*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30–3)**2+((8//3)**2)*10
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:01:56) 
-- CODE:
expressao = (30–3)**2+((8//3)**2)*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30–3)**2+((8//3)**2)*10
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:01:56) 
-- CODE:
expressao = (30–3)**2+((8//3)**2)*10
print(expressao)
-- EXECUTION TIME:
0.18149
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30\u20133)**2+((8//3)**2)*10
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:01:57) 
-- CODE:
expressao = (30–3)**2+((8//3)**2)*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30–3)**2+((8//3)**2)*10
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:02:12) 
-- CODE:
expressao = (30–3)**2+(8//3)**2*10
print(expressao)
-- EXECUTION TIME:
0.265969
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30\u20133)**2+(8//3)**2*10
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:02:20) 
-- CODE:
expressao = (30–3)**2+(8//3)**2(*10)
print(expressao)
-- EXECUTION TIME:
0.164081
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30\u20133)**2+(8//3)**2(*10)
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 10:09:29) 
-- CODE:
expressao = 30–3**2+8//3**2*10
print(expressao)
-- EXECUTION TIME:
0.174734
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133**2+8//3**2*10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 10:09:57) 
-- CODE:
expressao = (30–3**2+8)//(3**2*10)
print(expressao)
-- EXECUTION TIME:
0.12471
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30\u20133**2+8)//(3**2*10)
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 10:09:58) 
-- CODE:
expressao = (30–3**2+8)//(3**2*10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30–3**2+8)//(3**2*10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 10:10:01) 
-- CODE:
expressao = (30–3**2+8)//(3**2*10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30–3**2+8)//(3**2*10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 10:10:17) 
-- CODE:
expressao = ((30–3**2)+8)//((3**2)*10)
print(expressao)
-- EXECUTION TIME:
0.122967
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = ((30\u20133**2)+8)//((3**2)*10)
                     ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 10:10:18) 
-- CODE:
expressao = ((30–3**2)+8)//((3**2)*10)
print(expressao)
-- EXECUTION TIME:
0.219233
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = ((30\u20133**2)+8)//((3**2)*10)
                     ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 10:10:18) 
-- CODE:
expressao = ((30–3**2)+8)//((3**2)*10)
print(expressao)
-- EXECUTION TIME:
0.108596
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = ((30\u20133**2)+8)//((3**2)*10)
                     ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 10:10:19) 
-- CODE:
expressao = ((30–3**2)+8)//((3**2)*10)
print(expressao)
-- EXECUTION TIME:
0.201098
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = ((30\u20133**2)+8)//((3**2)*10)
                     ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 10:10:19) 
-- CODE:
expressao = ((30–3**2)+8)//((3**2)*10)
print(expressao)
-- EXECUTION TIME:
0.100763
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = ((30\u20133**2)+8)//((3**2)*10)
                     ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 12:59:22) 
-- CODE:
expressao = (30–3)**(2+8//3**2*10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30–3)**(2+8//3**2*10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 12:59:31) 
-- CODE:
expressao = (30–3)**(2+8//3**2*10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30–3)**(2+8//3**2*10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 13:08:32) 
-- CODE:
expressao = (30–3)**(2+8//3**(2*10))
print(expressao)
-- EXECUTION TIME:
0.147185
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30\u20133)**(2+8//3**(2*10))
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 13:08:40) 
-- CODE:
expressao = (30–3)**(2+8)//(3**(2*10))
print(expressao)
-- EXECUTION TIME:
0.158183
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30\u20133)**(2+8)//(3**(2*10))
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 13:09:13) 
-- CODE:
expressao = (30–3)**(2+8)//(3**(2*10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30–3)**(2+8)//(3**(2*10))
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 13:09:47) 
-- CODE:
expressao = (30-3)**(2+8//3**(2*10)
print(expressao)
-- EXECUTION TIME:
0.149355
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 13:09:52) 
-- CODE:
expressao = (30-3)**(2+8//3**2*10)
print(expressao)
-- EXECUTION TIME:
0.144399
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 13:10:01) 
-- CODE:
expressao = (30-3)**(2+8//3**(2*10))
print(expressao)
-- EXECUTION TIME:
0.232846
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 13:10:09) 
-- CODE:
expressao = (30-3)**(2+8//3**(2*10))
print(expressao)
-- OUTPUT:
729
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 13:10:19) 
-- CODE:
expressao = (30-3)**(2+8)//(3**(2*10))
print(expressao)
-- OUTPUT:
59049
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 13:10:38) 
-- CODE:
expressao = (27)**(10)//(3**(12))
print(expressao)
-- EXECUTION TIME:
0.14975
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
387420489
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 13:10:41) 
-- CODE:
expressao = (27)**(10)//(3**(12))
print(expressao)
-- OUTPUT:
387420489
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 13:10:53) 
-- CODE:
expressao = (27)**10//3**12
print(expressao)
-- EXECUTION TIME:
0.128473
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
387420489
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 13:10:56) 
-- CODE:
expressao = (27)**10//3**12
print(expressao)
-- OUTPUT:
387420489
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 13:13:44) 
-- CODE:
expressao = (30 – 3) ** (2 + 8) // (3 ** (2 * 10))
print(expressao)
-- EXECUTION TIME:
0.159232
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30 \u2013 3) ** (2 + 8) // (3 ** (2 * 10))
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 13:13:46) 
-- CODE:
expressao = (30 – 3) ** (2 + 8) // (3 ** (2 * 10))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3) ** (2 + 8) // (3 ** (2 * 10))
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 13:13:52) 
-- CODE:
expressao = (30 - 3) ** (2 + 8) // (3 ** (2 * 10))
print(expressao)
-- OUTPUT:
59049
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 14:15:23) 
-- CODE:
expressao = (30 - 3) ** (2 + 8) // (3 ** (2 * 10))
print(expressao)
-- OUTPUT:
59049
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 14:15:43) 
-- CODE:
expressao = (30 - 3) ** ((2 + 8) // (3 ** (2 * 10)))
print(expressao)
-- EXECUTION TIME:
0.210355
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 14:15:43) 
-- CODE:
expressao = (30 - 3) ** ((2 + 8) // (3 ** (2 * 10)))
print(expressao)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 14:15:49) 
-- CODE:
expressao = (30 - 3) ** ((2 + 8) // (3 ** (2 * 10)))
print(expressao)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 14:16:06) 
-- CODE:
expressao = ((30 - 3) ** (2 + 8)) // (3 ** (2 * 10))
print(expressao)
-- OUTPUT:
59049
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 10:09:13) 
-- CODE:
expressao = 30 - (3) ** 2 + (8 // (3 ** 2) * 1
print(expressao)
-- EXECUTION TIME:
0.183628
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 10:09:16) 
-- CODE:
expressao = 30 - (3) ** 2 + (8 // (3 ** 2) * 10
print(expressao)
-- EXECUTION TIME:
0.120369
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 10:09:34) 
-- CODE:
expressao = 30 - (3) ** 2 + (8 // (3 ** 2) * 10
print(expressao)
-- EXECUTION TIME:
0.209366
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 10:09:36) 
-- CODE:
expressao = 30 - (3) ** 2 + (8 // (3 ** 2) * 10
print(expressao)
-- ERROR:
File "XXXX", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 10:11:00) 
-- CODE:
expressao = 30 - ( 3 )** 2 + ( 8 // (3 ** 2)) * 10
print(expressao)
-- EXECUTION TIME:
0.218786
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
